--- a/sub1_about.html
+++ b/sub1_about.html
@@ -177,7 +177,7 @@
 
     <!-- 가운데 영상 -->
     <div class="water_drop">
-      <video src="./media/waterdrop.mp4" autoplay muted loop></video>
+      <video src="./media/waterdrop.mp4" autoplay muted loop playsinline></video>
     </div>
     <!-- 가운데 영상 -->
 
@@ -196,11 +196,11 @@
             좋은 물에서부터 시작됩니다.
           </p>
 
-          <video src="./media/water2_1.mp4" muted loop autoplay></video>
+          <video src="./media/water2_1.mp4" muted loop autoplay playsinline></video>
         </div>
 
         <div class="introduce_text2">
-          <video src="./media/rice1_2.mp4" muted loop autoplay></video>
+          <video src="./media/rice1_2.mp4" muted loop autoplay playsinline></video>
 
           <h1 data-aos="fade-left">
             Traditional Method <br>
