--- a/sub5_community.html
+++ b/sub5_community.html
@@ -180,7 +180,7 @@
               - 제품을 개봉 또는 사용한 경우
             </p>
             <p>
-              교환/반품은 [MENU] > [ORDER] > [주문취소 및 교환신청]를 통해 직접 신청하시거나, 고객센터(070-8094-0424)에 전화해 주세요. <br>
+              교환/반품은 [MENU] > [MY PAGE] > [주문취소 및 교환신청]를 통해 직접 신청하시거나, 고객센터(1544-0321)에 전화해 주세요. <br>
               해당 상품 구매 시 사은품/증정품 등이 제공된 경우, 상품 교환/반품 시 함께 보내주셔야 합니다.
             </p>
           </div>
