--- a/sub1_about.html
+++ b/sub1_about.html
@@ -90,8 +90,7 @@
 
     <!-- 메인베너 -->
     <div class="banner">
-      <img src="./image/2_bs/bs_mainbanner_img.png"
-        alt="일취월잔은 전통 증류식 소주 브랜드입니다. 한 잔의 술에는 봄·여름·가을·겨울 자연과 가공한 사람의 정성이 오롯이 담겨 있습니다. 당신의 일상 어느 순간에서나 당신은 이미 많은 생명 에너지의 응원을 받으며 귀하게 이어져 있음을 전하고 싶었습니다.">
+      <video src="./media/bs_mainbanner2.mp4" autoplay muted playsinline></video>
     </div>
     <!-- 메인베너 -->
 
@@ -202,12 +201,12 @@
         <div class="introduce_text2">
           <video src="./media/rice1_2.mp4" muted loop autoplay playsinline></video>
 
-          <h1 data-aos="fade-left">
+          <h1 data-aos="fade-left" data-aos-delay="200">
             Traditional Method <br>
             전통방식 그대로 만들었습니다.
           </h1>
 
-          <p data-aos="fade-left">
+          <p data-aos="fade-left" data-aos-delay="200">
             일취월잔은 예로부터 이어오던 전통주의 <br>
             제조 방식을 재현해 낸 소주로 희석식 소주와는 달리 <br>
             더 깔끔하고 부드러운 목넘김이 일품인 소주입니다
